# VNS

./: .env  abi.js  contract_deploy.js  package-lock.json  package.json  price_interact.js  registrar_interact.js  resolver_interact.js
nft/: Cargo.toml  lib.rs
price_oracle/: Cargo.toml  lib.rs
registrar/: Cargo.toml  lib.rs
registry/: Cargo.toml  lib.rs
resolver/: Cargo.toml  lib.rs
tests/nft_tests/: Cargo.toml
tests/nft_tests/src/: lib.rs
tests/price_oracle_tests/: Cargo.toml
tests/price_oracle_tests/src/: lib.rs
