[package]
name = "registrar"
version = "5.0.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]

ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
resolver = { path = "../resolver" }
price_oracle = { path = "../price_oracle" }
nft = {path = "../nft"}

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []
